--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: dart_orm_adapter_mysql
-version: 0.0.5
+version: 0.0.6
 description: >
   MySQL adapter for DartORM
 author: Ustimenko Sergey <ustims@gmail.com>
@@ -7,3 +7,4 @@ homepage: http://github.com/ustims/DartORM-MySQL
 dependencies:
   dart_orm: any
   sqljocky: ">=0.11.0 <0.12.0"
+  pub_semver: any
