--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,12 @@
 name: dart_orm_adapter_mysql
-version: 0.0.8
+version: 0.0.9-dev
 description: >
   MySQL adapter for DartORM
 author: Ustimenko Sergey <ustims@gmail.com>
 homepage: http://github.com/ustims/DartORM-MySQL
+environment:
+  sdk: '>=1.9.0 <2.0.0'
 dependencies:
-  dart_orm: any
-  sqljocky: ">=0.11.0 <0.12.0"
-  pub_semver: any
+  dart_orm: ">=0.0.4 <0.1.0"
+  sqljocky: ">=0.11.0 <0.15.0"
+  pub_semver: ">=1.2.0 <1.3.0"
