--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: dart_orm_adapter_mysql
-version: 0.1.0
+version: 0.1.1-dev
 description: >
   MySQL adapter for DartORM
 author: Ustimenko Sergey <ustims@gmail.com>
@@ -10,3 +10,5 @@ dependencies:
   dart_orm: ">=0.0.4 <0.1.0"
   sqljocky: ">=0.11.0 <0.15.0"
   pub_semver: ">=1.2.0 <1.3.0"
+dev_dependencies:
+  test: ^0.12.4
