--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: dart_orm_adapter_mysql
-version: 0.1.1-dev
+version: 0.1.1
 description: >
   MySQL adapter for DartORM
 author: Ustimenko Sergey <ustims@gmail.com>
@@ -7,7 +7,7 @@ homepage: https://github.com/ustims/DartORM-MySQL
 environment:
   sdk: '>=1.9.0 <2.0.0'
 dependencies:
-  dart_orm: ">=0.0.4 <0.1.0"
+  dart_orm: ">=0.0.4 <0.2.0"
   sqljocky: ">=0.11.0 <0.15.0"
   pub_semver: ">=1.2.0 <1.3.0"
 dev_dependencies:
