--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,13 @@ homepage: https://github.com/ustims/DartORM-MySQL
 environment:
   sdk: '>=1.9.0 <2.0.0'
 dependencies:
-  dart_orm: ">=0.0.4 <0.3.0"
-  sqljocky: ">=0.12.0 <0.15.0"
+#  dart_orm: ">=0.0.4 <0.3.0"
+  dart_orm:
+#    path: ../DartORM
+    git:
+      url: https://github.com/DartOrm/DartORM
+      ref: upgrade-libraries-and-use-docker-compose
+  sqljocky5: ^1.0.0
   pub_semver: ">=1.2.0 <1.3.0"
 dev_dependencies:
   test: ^0.12.5
